# Genome

./: .gitignore  2context.md  CHANGELOG_PHASE1_STANDARDIZATION.md  HARDENING_SUMMARY.md  PHASE1_FREEZE.md  README.md  context.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  config.py  main.py
backend/api/: embeddings.py  ingest.py
backend/pipelines/: __init__.py  ingestion.py
backend/schemas/: __init__.py  api_schemas.py  data_schemas.py
backend/services/: embedding_service.py  pipeline_service.py
data/examples/: README.md  generate_examples.py
docs/: architecture.md  ethics.md  non-medical-scope.md  phase1_acceptance.md  phase2_design.md  phase2_design_review.md  terminology.md
frontend/visualizations/: __init__.py  embedding_viz.py
ml/evaluation/: __init__.py
ml/foundation/: __init__.py  autoencoder.py  config.py  inference.py  trainer.py
ml/preprocessing/: __init__.py  config.py  normalization.py
ml/states/: __init__.py
ml/transitions/: __init__.py
scripts/: check_medical_terms.py  demo_phase1.py  integration_test.md  train_model.py
tests/: __init__.py  test_artifact_integrity.py  test_determinism.py  test_smoke.py  test_terminology.py
